# wx2codex

./: .gitignore  README.md  pyproject.toml
cloud/: package.json  wrangler.toml
cloud/migrations/: 0001_init.sql  0002_membership.sql
cloud/src/: agent_bundle.js  index.js
scripts/: build-agent-bundle.py  deploy-cloud.sh  install.sh
wx2codex_agent/: attachments.py  cli.py  cloud.py  codex_app_server.py  codex_bridge.py  codex_desktop_ipc.py  config.py  ilink.py  launchd.py  outbound.py
